--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -103,8 +103,14 @@
                             <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
                         </div>
                     </li> -->
-                    <li class="">
-                      <a class="" data-bs-toggle="" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User"></a>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdownAccount" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User">
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
+                          <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
+                          <!-- You can add more items here if needed -->
+                      </ul>
                   </li>
                 </ul>
             </div>
