--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -184,9 +184,33 @@
             </ul>
         </nav>
     </div> -->
-</section> 
 
-<footer class="main-footer font-xs">
+</section>
+
+<div class="d-flex justify-content-center">
+    <div class="pagination-area mt-15 mb-50">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-start">
+                <% if (currentPage > 1) { %>
+                <li class="page-item">
+                    <a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a>
+                </li>
+                <% } %>
+                <% for (let i = 1; i <= totalPages; i++) { %>
+                <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                    <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                </li>
+                <% } %>
+                <% if (currentPage < totalPages) { %>
+                <li class="page-item">
+                    <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
+                </li>
+                <% } %>
+            </ul>
+        </nav>
+    </div>
+    
+<footer class="main-footer font-xs  ">
     <!-- <div class="row pb-30 pt-15">
         <div class="col-sm-6">
             <script>
