--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -69,52 +69,52 @@
     </aside>
     <main class="main-wrap">
       <header class="main-header navbar">
-          <div class="col-search">
-              <!-- <form class="searchform">
-                  <div class="input-group">
-                      <input list="search_terms" type="text" class="form-control" placeholder="Search term">
-                      <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
-                  </div>
-                  <datalist id="search_terms">
-                  </datalist>
-              </form> -->
-            </div>
-            <div class="col-nav">
-                <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
-                <ul class="nav">
-                    <!-- <li class="nav-item">
-                        <a class="nav-link btn-icon" href="#">
-                            <i class="material-icons md-notifications animation-shake"></i>
-                            <span class="badge rounded-pill">3</span>
-                        </a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link btn-icon darkmode" href="#"> <i class="material-icons md-nights_stay"></i> </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
-                    </li> -->
-                    <!-- <li class="dropdown nav-item">
-                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-public"></i></a>
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
-                            <a class="dropdown-item text-brand" href="#"><img src="/Adminassets/imgs/theme/flag-us.png" alt="English">English</a>
-                            <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-fr.png" alt="Français">Français</a>
-                            <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-jp.png" alt="Français">日本語</a>
-                            <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
-                        </div>
-                    </li> -->
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdownAccount" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User">
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
-                          <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
-                          <!-- You can add more items here if needed -->
-                      </ul>
-                  </li>
-                </ul>
-            </div>
-        </header>
+        <div class="col-search">
+            <!-- <form class="searchform">
+                <div class="input-group">
+                    <input list="search_terms" type="text" class="form-control" placeholder="Search term">
+                    <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
+                </div>
+                <datalist id="search_terms">
+                </datalist>
+            </form> -->
+        </div>
+        <div class="col-nav">
+            <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
+            <ul class="nav">
+                <!-- <li class="nav-item">
+                    <a class="nav-link btn-icon" href="#">
+                        <i class="material-icons md-notifications animation-shake"></i>
+                        <span class="badge rounded-pill">3</span>
+                    </a>
+                </li> -->
+                <!-- <li class="nav-item">
+                    <a class="nav-link btn-icon darkmode" href="#"> <i class="material-icons md-nights_stay"></i> </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
+                </li> -->
+                <!-- <li class="dropdown nav-item">
+                    <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-public"></i></a>
+                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
+                        <a class="dropdown-item text-brand" href="#"><img src="//Adminassets/imgs/theme/flag-us.png" alt="English">English</a>
+                        <a class="dropdown-item" href="#"><img src="//Adminassets/imgs/theme/flag-fr.png" alt="Français">Français</a>
+                        <a class="dropdown-item" href="#"><img src="//Adminassets/imgs/theme/flag-jp.png" alt="Français">日本語</a>
+                        <a class="dropdown-item" href="#"><img src="//Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
+                    </div>
+                </li> -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAccount" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User">
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownAccount">
+                        <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
+                        <!-- You can add more items here if needed -->
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </header>
 <!-- <section class="content-main"> -->
 
         </div>
@@ -196,10 +196,31 @@
             </div> 
             </div> 
         </section> 
+
   
-
-
-
+        <div class="d-flex justify-content-center">
+          <div class="pagination-area mt-15 mb-50">
+              <nav aria-label="Page navigation example">
+                  <ul class="pagination justify-content-start">
+                      <% if (currentPage > 1) { %>
+                      <li class="page-item">
+                          <a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a>
+                      </li>
+                      <% } %>
+                      <% for (let i = 1; i <= totalPages; i++) { %>
+                      <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                          <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                      </li>
+                      <% } %>
+                      <% if (currentPage < totalPages) { %>
+                      <li class="page-item">
+                          <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
+                      </li>
+                      <% } %>
+                  </ul>
+              </nav>
+          </div>
+          
         <footer class="main-footer font-xs">
             <!-- <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
@@ -214,15 +235,16 @@
                 </div>
             </div> -->
         </footer>
+
     </main>
 
-    <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendors/select2.min.js"></script>
-    <script src="assets/js/vendors/perfect-scrollbar.js"></script>
-    <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
+    <script src="/Adminassets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="/Adminassets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="/Adminassets/js/vendors/select2.min.js"></script>
+    <script src="/Adminassets/js/vendors/perfect-scrollbar.js"></script>
+    <script src="/Adminassets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="/Adminassets/js/main.js" type="text/javascript"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
