--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -212,6 +212,30 @@
 
 
         </section>
+        
+                
+        <div class="d-flex justify-content-center">
+        <div class="pagination-area mt-15 mb-50">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-start">
+                    <% if (currentPage > 1) { %>
+                    <li class="page-item">
+                        <a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a>
+                    </li>
+                    <% } %>
+                    <% for (let i = 1; i <= totalPages; i++) { %>
+                    <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                        <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                    </li>
+                    <% } %>
+                    <% if (currentPage < totalPages) { %>
+                    <li class="page-item">
+                        <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
+                    </li>
+                    <% } %>
+                </ul>
+            </nav>
+        </div>
 
 
         <footer class="main-footer font-xs">
@@ -236,18 +260,18 @@
 
 
 
-    <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendors/select2.min.js"></script>
-    <script src="assets/js/vendors/perfect-scrollbar.js"></script>
-    <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
+    <script src="/Adminassets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="/Adminassets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="/Adminassets/js/vendors/select2.min.js"></script>
+    <script src="/Adminassets/js/vendors/perfect-scrollbar.js"></script>
+    <script src="/Adminassets/js/vendors/jquery.fullscreen.min.js"></script>
 
 
 
 
 
     <!-- Main Script -->
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="/Adminassets/js/main.js" type="text/javascript"></script>
 
 
 
